--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -8,7 +8,7 @@
 
 				<div class="navbar-header">
 					<!-- Toggle navigation open/close for small screens -->
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#header-navbar">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -17,14 +17,14 @@
 					<a class="navbar-brand logo" [routerLink]="['/']"><img src="assets/images/logo.svg"></a>
 				</div>
 
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<div class="collapse navbar-collapse" id="header-navbar">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a [routerLink]="['/styleguide']">Style guide</a></li>
 						<li><a [routerLink]="['/form']">Form</a></li>
 						<li><a [routerLink]="['/']">Link</a></li>
 						<!-- Bootstrap dropdown menu -->
 						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Links Dropdown <span class="caret"></span></a>
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Links Dropdown <span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li><a [routerLink]="['/']">Link 1</a></li>
 								<li><a [routerLink]="['/']">Link 2</a></li>
