--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4813,7 +4813,10 @@ select {
   width: 100%;
   -webkit-appearance: none;
   -moz-appearance: none;
-  appearance: none; }
+  appearance: none;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s; }
   input[type="text"].error,
   input[type="password"].error,
   input[type="email"].error,
@@ -4821,14 +4824,7 @@ select {
   input[type="number"].error,
   select.error {
     border: solid 1px red;
-    margin-bottom: 5; }
-    input[type="text"].error ~ .error-message,
-    input[type="password"].error ~ .error-message,
-    input[type="email"].error ~ .error-message,
-    input[type="date"].error ~ .error-message,
-    input[type="number"].error ~ .error-message,
-    select.error ~ .error-message {
-      display: block; }
+    color: red; }
 
 select {
   background-image: url(../assets/images/ddl-arrow.svg);
@@ -4838,18 +4834,41 @@ select {
   padding-right: 40px; }
 
 label {
-  font-weight: normal; }
-  @media (min-width: 768px) {
+  display: block;
+  float: left;
+  font-weight: normal;
+  margin-bottom: 5px; }
+  @media (min-width: 480px) {
     label {
+      float: none;
       margin-bottom: 15px; } }
+  label.error {
+    margin-bottom: 0; }
 
 .error-message {
   color: red;
-  display: none;
+  display: block;
   float: right;
-  margin-bottom: 10px;
+  max-height: 0px;
   font-size: 12px;
-  font-size: 1.2rem; }
+  font-size: 1.2rem;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s; }
+  @media (min-width: 480px) {
+    .error-message {
+      float: left; } }
+
+.error ~ .error-message {
+  margin-bottom: 5px;
+  max-height: 100px;
+  opacity: 1;
+  filter: alpha(opacity=100); }
+  @media (min-width: 992px) {
+    .error ~ .error-message {
+      margin-bottom: 15px; } }
 
 .checkbox,
 .radio {
@@ -4860,6 +4879,7 @@ label {
   .checkbox label,
   .radio label {
     display: inline-block !important;
+    float: left;
     padding-left: 40px;
     position: relative;
     z-index: 1; }
@@ -4892,6 +4912,10 @@ label {
       -webkit-transition: all 0.1s;
       -o-transition: all 0.1s;
       transition: all 0.1s; }
+  .checkbox .error-message,
+  .radio .error-message {
+    padding-left: 40px;
+    width: 100%; }
 
 .checkbox span:before {
   background: url(../assets/images/tick.svg);
@@ -5099,6 +5123,11 @@ ol ol {
   .vertical-center {
     align-items: center;
     display: flex; } }
+
+@media (min-width: 768px) {
+  .vertical-center-middle {
+    display: flex;
+    flex-direction: column; } }
 
 ul.list-inline {
   margin: 0; }
