--- a/src/app/styleguide/styleguide.html
+++ b/src/app/styleguide/styleguide.html
@@ -585,7 +585,7 @@
 						- Label length and wrapping<br/>
 						- Selected color<br/>
 						- Margin before and after list<br/>
-						- Error states, messages and positioning
+						- Error states, messages and positioning<br/>
 						- Focus style
 					</samp>
 				</div>
@@ -657,7 +657,8 @@
 						- Multi-line errors<br/>
 						- Date format<br/>
 						- Native date picker or custom?<br/>
-						- Focus style?
+						- Focus style?,<br/>
+						- Autofill style?
 					</samp>
 				</div>
 			</div>
@@ -705,7 +706,7 @@
 						- Default option ( -please select- )?<br/>
 						- Native dropdown or custom?<br/>
 						- Margins and padding<br/>
-						- Error states, messages and positioning,
+						- Error states, messages and positioning,<br/>
 						- Dropdown arrow - svg
 					</samp>
 				</div>
