--- a/src/styles/base/form.scss
+++ b/src/styles/base/form.scss
@@ -41,6 +41,8 @@ label {
 	font-weight: normal;
 	margin-bottom: 5px;
 
+	@include transition(all 0.3s);
+
 	@media(min-width: $screen-xs) {
 		float: none;
 		margin-bottom: 15px;
@@ -131,6 +133,7 @@ label {
 	}
 
 	.error-message {
+		margin-bottom: 0px;
 		padding-left: 40px;
 		width: 100%;
 	}
