--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4837,7 +4837,10 @@ label {
   display: block;
   float: left;
   font-weight: normal;
-  margin-bottom: 5px; }
+  margin-bottom: 5px;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s; }
   @media (min-width: 480px) {
     label {
       float: none;
@@ -4914,6 +4917,7 @@ label {
       transition: all 0.1s; }
   .checkbox .error-message,
   .radio .error-message {
+    margin-bottom: 0px;
     padding-left: 40px;
     width: 100%; }
 
