--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4852,6 +4852,7 @@ label {
   color: red;
   display: block;
   float: right;
+  line-height: 1.2;
   max-height: 0px;
   font-size: 12px;
   font-size: 1.2rem;
@@ -4864,14 +4865,22 @@ label {
     .error-message {
       float: left; } }
 
+.error .error-message,
 .error ~ .error-message {
   margin-bottom: 5px;
   max-height: 100px;
   opacity: 1;
   filter: alpha(opacity=100); }
   @media (min-width: 992px) {
+    .error .error-message,
     .error ~ .error-message {
       margin-bottom: 15px; } }
+
+input-errors .error .error-message {
+  margin-bottom: 5px; }
+
+input-errors .error:last-child .error-message {
+  margin-bottom: 10px; }
 
 .checkbox,
 .radio {
