--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -21,7 +21,7 @@
 					<ul class="nav navbar-nav navbar-right">
 						<li><a [routerLink]="['/styleguide']">Style guide</a></li>
 						<li><a [routerLink]="['/form']">Form</a></li>
-						<li><a [routerLink]="['/']">Link</a></li>
+						<li><a [routerLink]="['/todo']">Todo</a></li>
 						<!-- Bootstrap dropdown menu -->
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Links Dropdown <span class="caret"></span></a>
