added new forms module

--- a/src/app/form-results/form-results.html
+++ b/src/app/form-results/form-results.html
@@ -30,10 +30,9 @@
 				    		<th>Address</th>
 				    		<th>Postcode</th>
 				    		<th>State</th>
-				    		<th>Agreed to T+C</th>
 				    		<th>Opt in 1</th>
-				    		<th>Other checkbox</th>
 				    		<th>Opt in 2</th>
+				    		<th>Agreed to T+C</th>
 					   	</tr>
 					   </thead>
 					   <tbody>
@@ -44,10 +43,9 @@
 				    		<td>{{signup.address1}}</td>
 				    		<td>{{signup.postcode}}</td>
 				    		<td>{{signup.state}}</td>
-				    		<td>{{signup.agreed}}</td>
-				    		<td>{{signup.chk1}}</td>
-				    		<td>{{signup.chk}}</td>
-				    		<td>{{signup.chk2}}</td>
+				    		<td>{{signup.optIn}}</td>
+				    		<td>{{signup.optIn2}}</td>
+				    		<td>{{signup.terms}}</td>
 					   	</tr>
 					   </tbody>
 					    
@@ -57,7 +55,7 @@
 	    </div>
 	  </div>
 
-	  <div class="col-xs-12 col-md-8 col-md-offset-2">
+	  <div class="col-xs-12">
   		<hr/>
   	</div>
 
