--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -20,7 +20,7 @@
 				<div class="collapse navbar-collapse" id="header-navbar">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a [routerLink]="['/styleguide']">Style guide</a></li>
-						<li><a [routerLink]="['/form']">Form</a></li>
+						<li><a [routerLink]="['/form-new']">Form</a></li>
 						<li><a [routerLink]="['/todo']">Todo</a></li>
 						<!-- Bootstrap dropdown menu -->
 						<li class="dropdown">
@@ -29,6 +29,7 @@
 								<li><a [routerLink]="['/']">Link 1</a></li>
 								<li><a [routerLink]="['/']">Link 2</a></li>
 								<li><a [routerLink]="['/']">Link 3</a></li>
+								<li><a [routerLink]="['/form']">Forms Deprecated</a></li>
 								<li><a [routerLink]="['/form-results']">Form Results</a></li>
 							</ul>
 						</li>
